apps/web/public/demo/terraform/networking.tf
# Generated by RepliMap Codify

resource "aws_eip" "eipalloc-638f920556a7ffea2" {
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-nat-a"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
}

resource "aws_eip" "eipalloc-72c8a129af0551560" {
  instance = "i-9503494747778cfa3"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-bastion"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
}

resource "aws_internet_gateway" "acme-shop-igw" {
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-igw"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_nat_gateway" "nat-d84d439f30742d436" {
  allocation_id     = aws_eip.eipalloc-638f920556a7ffea2.id
  connectivity_type = "public"
  subnet_id         = aws_subnet.acme-shop-public-a.id
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-nat-a"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
}

resource "aws_route_table" "acme-shop-data" {
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-data"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_route_table" "acme-shop-private" {
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-private"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_route_table" "acme-shop-public" {
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-public"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_vpc_endpoint" "acme-shop-s3-gateway" {
  private_dns_enabled = false
  route_table_ids     = [aws_route_table.acme-shop-private.id]
  service_name        = "com.amazonaws.us-west-2.s3"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-s3-gateway"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_endpoint_type = "Gateway"
  vpc_id            = aws_vpc.acme-shop-prod.id
}
