apps/web/public/demo/terraform/vpc.tf
# Generated by RepliMap Codify

resource "aws_subnet" "acme-shop-app-a" {
  availability_zone       = "us-west-2a"
  cidr_block              = "10.20.10.0/24"
  map_public_ip_on_launch = false
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-app-a"
    Owner       = "platform-team"
    Project     = "acme-shop"
    Tier        = "app"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_subnet" "acme-shop-app-b" {
  availability_zone       = "us-west-2b"
  cidr_block              = "10.20.11.0/24"
  map_public_ip_on_launch = false
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-app-b"
    Owner       = "platform-team"
    Project     = "acme-shop"
    Tier        = "app"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_subnet" "acme-shop-data-a" {
  availability_zone       = "us-west-2a"
  cidr_block              = "10.20.20.0/24"
  map_public_ip_on_launch = false
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-data-a"
    Owner       = "platform-team"
    Project     = "acme-shop"
    Tier        = "data"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_subnet" "acme-shop-data-b" {
  availability_zone       = "us-west-2b"
  cidr_block              = "10.20.21.0/24"
  map_public_ip_on_launch = false
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-data-b"
    Owner       = "platform-team"
    Project     = "acme-shop"
    Tier        = "data"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_subnet" "acme-shop-public-a" {
  availability_zone       = "us-west-2a"
  cidr_block              = "10.20.0.0/24"
  map_public_ip_on_launch = true
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-public-a"
    Owner       = "platform-team"
    Project     = "acme-shop"
    Tier        = "public"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_subnet" "acme-shop-public-b" {
  availability_zone       = "us-west-2b"
  cidr_block              = "10.20.1.0/24"
  map_public_ip_on_launch = true
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-public-b"
    Owner       = "platform-team"
    Project     = "acme-shop"
    Tier        = "public"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_vpc" "acme-shop-prod" {
  cidr_block = "10.20.0.0/16"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-prod"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
}
