apps/web/public/demo/terraform/security_groups.tf
# Generated by RepliMap Codify

resource "aws_security_group" "acme-shop-alb" {
  description = "Public ALB"
  egress {
    description     = "to ECS tasks"
    from_port       = 8080
    protocol        = "tcp"
    security_groups = ["sg-606a73056de912684"]
    to_port         = 8080
  }
  egress {
    description     = "to web ASG"
    from_port       = 8080
    protocol        = "tcp"
    security_groups = ["sg-0e69eb1459d8a78de"]
    to_port         = 8080
  }
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTPS from the internet"
    from_port   = 443
    protocol    = "tcp"
    to_port     = 443
  }
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP redirect"
    from_port   = 80
    protocol    = "tcp"
    to_port     = 80
  }
  name = "acme-shop-alb"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-alb"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_security_group" "acme-shop-aurora" {
  description = "Aurora cluster"
  ingress {
    description     = "from ECS"
    from_port       = 3306
    protocol        = "tcp"
    security_groups = ["sg-606a73056de912684"]
    to_port         = 3306
  }
  ingress {
    description     = "from web ASG"
    from_port       = 3306
    protocol        = "tcp"
    security_groups = ["sg-0e69eb1459d8a78de"]
    to_port         = 3306
  }
  ingress {
    description     = "from Lambda"
    from_port       = 3306
    protocol        = "tcp"
    security_groups = ["sg-9004e17ab2f86e839"]
    to_port         = 3306
  }
  name = "acme-shop-aurora"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-aurora"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_security_group" "acme-shop-bastion-ssh" {
  description = "Bastion host"
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    description = ""
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
  }
  ingress {
    cidr_blocks = ["203.0.113.0/24"]
    description = "office egress range"
    from_port   = 22
    protocol    = "tcp"
    to_port     = 22
  }
  name = "acme-shop-bastion-ssh"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-bastion-ssh"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_security_group" "acme-shop-ecs" {
  description = "ECS Fargate tasks"
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    description = ""
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
  }
  ingress {
    description     = "from ALB"
    from_port       = 8080
    protocol        = "tcp"
    security_groups = ["sg-40058471c47d39501"]
    to_port         = 8080
  }
  name = "acme-shop-ecs"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-ecs"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_security_group" "acme-shop-lambda" {
  description = "Lambda in VPC"
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    description = ""
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
  }
  name = "acme-shop-lambda"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-lambda"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_security_group" "acme-shop-redis" {
  description = "ElastiCache Redis"
  ingress {
    description     = "from ECS"
    from_port       = 6379
    protocol        = "tcp"
    security_groups = ["sg-606a73056de912684"]
    to_port         = 6379
  }
  ingress {
    description     = "from web ASG"
    from_port       = 6379
    protocol        = "tcp"
    security_groups = ["sg-0e69eb1459d8a78de"]
    to_port         = 6379
  }
  name = "acme-shop-redis"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-redis"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}

resource "aws_security_group" "acme-shop-web-asg" {
  description = "EC2 web instances"
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    description = ""
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
  }
  ingress {
    description     = "from ALB"
    from_port       = 8080
    protocol        = "tcp"
    security_groups = ["sg-40058471c47d39501"]
    to_port         = 8080
  }
  ingress {
    description     = "ssh from bastion"
    from_port       = 22
    protocol        = "tcp"
    security_groups = ["sg-1d822930c582b5545"]
    to_port         = 22
  }
  name = "acme-shop-web-asg"
  tags = {
    CostCenter  = "cc-1042"
    Environment = "prod"
    Name        = "acme-shop-web-asg"
    Owner       = "platform-team"
    Project     = "acme-shop"
  }
  vpc_id = aws_vpc.acme-shop-prod.id
}
